--- a/hello.yaml
+++ b/hello.yaml
@@ -12,7 +12,7 @@
       private: yes
   tasks:
     - name: Configure FastEthernet interfaces
-      ios_command:
+      ios_config:
         lines:
           - interface FastEthernet0/0
           - ip address 20.20.1.1 255.255.255.0
@@ -29,7 +29,7 @@
       register: result_fastethernet
 
     - name: Configure SSH and username
-      ios_command:
+      ios_config:
         lines:
           - conf t
           - username {{ username }} secret {{ password }}
@@ -40,7 +40,7 @@
       register: result_SSH
 
     - name: Configure OSPF
-      ios_command:
+      ios_config:
         lines:
           - router ospf 1
           - network 0.0.0.0 255.255.255.255 area 0
