--- a/hello.yaml
+++ b/hello.yaml
@@ -4,13 +4,12 @@
   gather_facts: no
   connection: network_cli
   tasks:
-    - name: Ensure ipv4 address is configured on FastEthernet5/0
-    community.network.ce_ip_interface:
-      interface: FastEthernet5/0
-      version: v4
-      state: present
-      addr: 10.20.20.20
-      mask: 24
+     name: Configure interface FastEthernet0/0
+      ios_config:
+        lines:
+          - interface FastEthernet 5/0
+          - ip address 192.168.4.5
+          - no shutdown
 
     - name: Configure SSH and username
       ios_config:
