--- a/hello.yaml
+++ b/hello.yaml
@@ -8,7 +8,7 @@
       ios_config:
         lines:
           - interface FastEthernet6/0
-          - ip address 192.168.4.5
+          - ip address 192.168.4.5 255.255.255.0
           - no shutdown
 
     - name: Configure SSH and username
