--- a/hello.yaml
+++ b/hello.yaml
@@ -6,6 +6,7 @@
     - name: Configure interface FastEthernet6/0
       ios_config:
         lines:
+          - conf t
           - interface FastEthernet6/0
           - ip address 192.168.4.5 255.255.255.0
           - no shutdown
