--- a/hello.yaml
+++ b/hello.yaml
@@ -1,14 +1,14 @@
 - name: Configure network devices
-  hosts: r1
+  hosts: all
   gather_facts: no
   connection: network_cli
   tasks:
     - name: Configure interface FastEthernet6/0
       ios_config:
-        lines:
-          - interface FastEthernet6/0
-          - ip address 192.168.4.5 255.255.255.0
-          - no shutdown
+        ios_command:
+          commands: interface FastEthernet6/0
+          commands: ip address 192.168.4.5 255.255.255.0
+
       register: result_interface_config
 
     - name: Configure SSH and username
