--- a/hello.yaml
+++ b/hello.yaml
@@ -6,6 +6,7 @@
     - name: Configure interface FastEthernet6/0
       ios_config:
         ios_command:
+          commands: conf t
           commands: interface FastEthernet6/0
           commands: ip address 192.168.4.5 255.255.255.0
 
