--- a/hello.yaml
+++ b/hello.yaml
@@ -6,12 +6,11 @@
   tasks:
     - name: Configure interface FastEthernet6/0
       ios_command:
-        commands: conf t
-        commands: interface FastEthernet6/0
-        commands: ip address 192.168.4.5 255.255.255.0
-
+        commands:
+          - conf t
+          - interface FastEthernet6/0
+          - ip address 192.168.4.5 255.255.255.0
       register: result_interface_config
-
     - name: Configure SSH and username
       ios_config:
         lines:
