--- a/hello.yaml
+++ b/hello.yaml
@@ -12,9 +12,8 @@
           - ip address 192.168.4.5 255.255.255.0
       register: result_interface_config
     - name: Configure SSH and username
-      ios_config:
-        lines:
-          - conf t
+      ios_command:
+        commands:
           - username ahmed12 secret ahmed12
           - crypto key generate rsa encryption modulus 1024
           - line vty 0 4
