--- a/switch.yaml
+++ b/switch.yaml
@@ -6,7 +6,7 @@
     tasks:
       - name: run sh ip int br
         ios_command:
-          commands: show ip int br
+          commands: show vlan br
         register: sh_ip_int_br_result
       - name: Debug registered var
         debug: var=sh_ip_int_br_result.stdout_lines
