--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -5,5 +5,6 @@
   connection: network_cli
   tasks:
     - name: run sh ip int br
-        ios_command:
-          commands: show ip int br
+      panos_cli:
+        cmd: show interface management
+      register: management_interface_output
