--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -5,6 +5,6 @@
   connection: network_cli
   tasks:
     - name: Run 'show interface management' command on PaloAlto firewall
-      panos_command:
+      community.paloaltonetworks.panos.panos_command:
         cmd: show interface management
       register: management_interface_output
