--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -1,11 +1,11 @@
 ---
 - name: Provision Palo Alto Networks firewall and associated resources
-  hosts: localhost
+  hosts: all
   gather_facts: false
 
   vars:
     panos_provider:
-      hostname: "192.168.1.130"
+      hostname: "192.168.1.132"
       username: "admin"
       password: "Ahmed123"  # Added a closing quotation mark here
 
