--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -8,6 +8,8 @@
       hostname: "192.168.1.132"
       username: "admin"
       password: "Ahmed123"  # Added a closing quotation mark here
+  collections:
+    - paloaltonetworks.panos
 
   tasks:
     - name: Configure general settings
