--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -11,17 +11,17 @@
   collections:
     - paloaltonetworks.panos
 
-  tasks:
-    - name: Create first security rule
-      paloaltonetworks.panos.panos_security_rule:
-        provider: '{{ device }}'
-        rule_name: 'Prod SSH Inbound'
-        source_zone: ['untrust']
-        destination_zone: ['trust']
-        source_ip: ['any']
-        destination_ip: ['Prod-Instances']
-        application: ['ssh']
-        service: ['application-default']
-        action: 'allow'
-        tag_name: ['Prod']
-        commit: false
+  # tasks:
+  #   - name: Create first security rule
+  #     paloaltonetworks.panos.panos_security_rule:
+  #       provider: '{{ device }}'
+  #       rule_name: 'Prod SSH Inbound'
+  #       source_zone: ['untrust']
+  #       destination_zone: ['trust']
+  #       source_ip: ['any']
+  #       destination_ip: ['Prod-Instances']
+  #       application: ['ssh']
+  #       service: ['application-default']
+  #       action: 'allow'
+  #       tag_name: ['Prod']
+  #       commit: false
