--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -9,12 +9,9 @@
       username: "admin"
       password: "Ahmed123"
 
-  collections:
-    - paloaltonetworks.panos
-
   tasks:
     - name: Create first security rule
-      paloaltonetworks.panos.panos_security_rule:  # Updated module name
+      paloaltonetworks.panos.panos_security_rule:
         provider: '{{ device }}'
         rule_name: 'Prod SSH Inbound'
         source_zone: ['untrust']
