--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -10,16 +10,16 @@
       password: "Ahmed123"
 
   tasks:
-    - name: Create first security rule
-      paloaltonetworks.panos.panos_security_rule:
-        provider: '{{ device }}'
-        rule_name: 'Prod SSH Inbound'
-        source_zone: ['untrust']
-        destination_zone: ['trust']
-        source_ip: ['any']
-        destination_ip: ['Prod-Instances']
-        application: ['ssh']
-        service: ['application-default']
-        action: 'allow'
-        tag_name: ['Prod']
-        commit: false
+    - name: Add Security Rule
+      panos_security_rule:
+        provider: "{{ device }}"
+        rule_name: "Allow SSH from Internal to DMZ"
+        source_zone: "internal"
+        source_ip: "192.168.1.0/24"
+        destination_zone: "dmz"
+        destination_ip: "10.10.10.0/24"
+        destination_port: "22"
+        action: "allow"
+        log_setting: "log-and-forward"
+        description: "Allow SSH traffic from internal to DMZ"
+        state: "present"
