--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -9,8 +9,13 @@
       username: "admin"
       password: "Ahmed123"
 
-  tasks:
-    - name: Add Security Rule
-      paloaltonetworks.panos.panos_op:
-        provider: "{{ device }}"
-        cmd: 'show interface managment'
+   interfaces:
+      - if_name: 'ethernet1/1'
+        mode: 'layer3'
+        ip: ['192.168.55.20/24']
+      - if_name: 'ethernet1/2'
+        mode: 'layer3'
+        ip: ['192.168.45.20/24']
+      - if_name: 'ethernet1/3'
+        mode: 'layer3'
+        ip: ['192.168.35.20/24']
