--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Provision Palo Alto Networks firewall and associated resources
+- name: Create security policies
   hosts: all
   gather_facts: false
 
@@ -9,13 +9,15 @@
       username: "admin"
       password: "Ahmed123"
 
-   interfaces:
-      - if_name: 'ethernet1/1'
-        mode: 'layer3'
-        ip: ['192.168.55.20/24']
-      - if_name: 'ethernet1/2'
-        mode: 'layer3'
-        ip: ['192.168.45.20/24']
-      - if_name: 'ethernet1/3'
-        mode: 'layer3'
-        ip: ['192.168.35.20/24']
+   tasks:
+    - name: Add example rule 1
+      paloaltonetworks.panos.panos_security_rule:
+        provider: "{{ device }}"
+        rule_name: "example rule 1"
+        source_zone: ["any"]
+        source_ip: ["source-server"]
+        destination_zone: ["any"]
+        destination_ip: ["destination-server"]
+        application: ["ssh"]
+        service: ["tcp-12345"]
+        action: "allow"
