--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -6,7 +6,7 @@
 
   vars:
     device:
-      hostname: "192.168.1.132"
+      ip_address: "192.168.1.132"
       username: "admin"
       password: "Ahmed123"
 
