--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -2,3 +2,7 @@
 collections:
   - paloaltonetworks.panos
   - cisco.ios
+  - name: Install pan-python library
+      pip:
+        name: pan-python
+        state: present
