--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
--i https://pypi.org/simple
-bcrypt==4.0.1
-boto3==1.26.78
-botocore==1.29.164
-cffi==1.15.1
-cryptography==41.0.2
-jmespath==1.0.1
-pan-os-python==1.8.1
-pan-python==0.17.0
-paramiko==2.12.0
-pycparser==2.21
-pynacl==1.5.0
-python-dateutil==2.8.2
-s3transfer==0.6.1
-six==1.16.0
-urllib3==1.26.14
-xmltodict==0.13.0
+pan-os-python==1.8.0 ; python_version >= "3.8" and python_version < "4.0" \
+    --hash=sha256:843972122ef4c5bfd17354070e3ada1285e243325f5e7cf7fd969150048becd4 \
+    --hash=sha256:da9153fe4a961a43d36016851ab06df45a37ea8612ed36b3b5b528f8394f34f5
+pan-python==0.17.0 ; python_version >= "3.8" and python_version < "4.0" \
+    --hash=sha256:9c074ea2f69a63996a6fefe8935d60dca61660e14715ac19d257ea9b1c41c6e2 \
+    --hash=sha256:f4674e40763c46d5933244b3059a57884e4e28205ef6d0f9ce2dc2013e3db010
+xmltodict==0.12.0 ; python_version >= "3.8" and python_version < "4.0" \
+    --hash=sha256:50d8c638ed7ecb88d90561beedbf720c9b4e851a9fa6c47ebd64e99d166d8a21 \
+    --hash=sha256:8bbcb45cc982f48b2ca8fe7e7827c5d792f217ecf1792626f808bf41c3b86051
