--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -11,19 +11,14 @@
       password: "Ahmed123"
 
   tasks:
-    - name: show list of all interfaces
-      paloaltonetworks.panos.panos_op:
-        provider: '{{ palo_provider }}'
-        cmd: "show interface logical"
-      register: show_interface_logical
-    # - name: Add example rule 1
-    #   paloaltonetworks.panos.panos_security_rule:
-    #     provider: "{{ device }}"
-    #     rule_name: "example rule 1"
-    #     source_zone: ["any"]
-    #     source_ip: ["source-server"]
-    #     destination_zone: ["any"]
-    #     destination_ip: ["destination-server"]
-    #     application: ["ssh"]
-    #     service: ["tcp-12345"]
-    #     action: "allow" 
+    - name: Add example rule 1
+      paloaltonetworks.panos.panos_security_rule:
+        provider: "{{ device }}"
+        rule_name: "example rule 1"
+        source_zone: ["any"]
+        source_ip: ["source-server"]
+        destination_zone: ["any"]
+        destination_ip: ["destination-server"]
+        application: ["ssh"]
+        service: ["tcp-12345"]
+        action: "allow" 
