--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -14,6 +14,7 @@
     - name: Add example rule 1
       paloaltonetworks.panos.panos_security_rule:
         provider: "{{ device }}"
+        rule_name: 'permit'
         source_zones: ["any"]
         source_addresses: ["any"]
         source_users: ["any"]
