--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -11,7 +11,7 @@
       password: "Ahmed123"
 
   tasks:
-    - name: Create second security rule
+    - name: Create first security rule
       paloaltonetworks.panos.panos_security_rule:
         provider: "{{ device }}"
         rule_name: 'permit'
@@ -22,4 +22,19 @@
         application: ['any']
         service: ['application-default']
         action: 'allow'
+
+    - name: add interfaces to zone trust2
+      paloaltonetworks.panos.panos_interface:
+        provider: '{{ provider }}'
+        zone: 'trust2'
+        mode: 'layer3'
+        interface: ['ethernet1/1', 'ethernet1/1.30', 'ethernet1/1.40']
+
+    - name: add ethernet1/2 to zone untrust2
+      paloaltonetworks.panos.panos_interface:
+        provider: '{{ provider }}'
+        zone: 'untrust2'
+        mode: 'layer3'
+        interface: ['ethernet1/2']
+
  
