--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -25,14 +25,14 @@
 
     - name: add interfaces to zone trust2
       paloaltonetworks.panos.panos_interface:
-        provider: '{{ provider }}'
+        provider: '{{ device }}'
         zone: 'trust2'
         mode: 'layer3'
         interface: ['ethernet1/1', 'ethernet1/1.30', 'ethernet1/1.40']
 
     - name: add ethernet1/2 to zone untrust2
       paloaltonetworks.panos.panos_interface:
-        provider: '{{ provider }}'
+        provider: '{{ device }}'
         zone: 'untrust2'
         mode: 'layer3'
         interface: ['ethernet1/2']
