--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -22,14 +22,25 @@
         application: ['any']
         service: ['application-default']
         action: 'allow'
-
+    - name: create DMZ zone on a firewall
+      paloaltonetworks.panos.panos_zone:
+        provider: '{{ device }}'
+        zone: 'trust2'
+        mode: 'layer3'
+        
     - name: add interfaces to zone trust2
       paloaltonetworks.panos.panos_interface:
         provider: '{{ device }}'
         zone: 'trust2'
         mode: 'layer3'
         interface: ['ethernet1/1', 'ethernet1/1.30', 'ethernet1/1.40']
-
+        
+    - name: create DMZ zone on a firewall
+      paloaltonetworks.panos.panos_zone:
+        provider: '{{ device }}'
+        zone: 'untrust2'
+        mode: 'layer3'
+        
     - name: add ethernet1/2 to zone untrust2
       paloaltonetworks.panos.panos_interface:
         provider: '{{ device }}'
