--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -23,13 +23,22 @@
         service: ['application-default']
         action: 'allow'
 
-    - name: ethernet1/1.50 as static in zone trust2
-      paloaltonetworks.panos.panos_l3_subinterface:
-        provider: '{{ device }}'
-        name: "ethernet1/1.50"
-        tag: 50
-        ip: ["10.1.1.1/24"]
-        zone_name: "trust2"
+     - name: Create ethernet interfaces
+       paloaltonetworks.panos.panos_interface:
+         provider: '{{ provider }}'
+         if_name: "{{ item.name }}"
+         ip: "{{ item.ip }}"
+       with_items:
+         - { name: "ethernet1/5", ip: "10.10.10.10" }
+         - { name: "ethernet1/6", ip: "10.10.30.30" }
+
+    # - name: enable DHCP client on ethernet1/1.5 in zone public
+    #   paloaltonetworks.panos.panos_l3_subinterface:
+    #     provider: '{{ device }}'
+    #     name: "ethernet1/1.5"
+    #     tag: 5
+    #     ip: ["10.1.1.1/24"]
+    #     zone_name: "trust2"
     - name: create DMZ zone on a firewall
       paloaltonetworks.panos.panos_zone:
         provider: '{{ device }}'
