--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -23,7 +23,7 @@
         service: ['application-default']
         action: 'allow'
 
-    - name: test_panos_interface - Modify
+    - name: Create ethernet interfaces
       paloaltonetworks.panos.panos_interface:
         provider: '{{ device }}'
         if_name: 'ethernet1/3'
@@ -32,25 +32,19 @@
         ip: ['10.1.1.1/24']
         enable_dhcp: false
       register: result
-    # - name: enable DHCP client on ethernet1/1.5 in zone public
-    #   paloaltonetworks.panos.panos_l3_subinterface:
-    #     provider: '{{ device }}'
-    #     name: "ethernet1/1.5"
-    #     tag: 5
-    #     ip: ["10.1.1.1/24"]
-    #     zone_name: "trust2"
+
     - name: create DMZ zone on a firewall
       paloaltonetworks.panos.panos_zone:
         provider: '{{ device }}'
         zone: 'trust2'
         mode: 'layer3'
         
-    # - name: add interfaces to zone trust2
-    #   paloaltonetworks.panos.panos_interface:
-    #     provider: '{{ device }}'
-    #     zone: 'trust2'
-    #     mode: 'layer3'
-    #     interface: ['ethernet1/1', 'ethernet1/1.30', 'ethernet1/1.40']
+    - name: add interfaces to zone trust2
+      paloaltonetworks.panos.panos_interface:
+        provider: '{{ device }}' 
+        zone: 'trust2'
+        mode: 'layer3'
+        interfaces: ['ethernet1/1', 'ethernet1/1.30', 'ethernet1/1.40']
         
     - name: create DMZ zone on a firewall
       paloaltonetworks.panos.panos_zone:
