--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -44,7 +44,11 @@
         provider: '{{ device }}' 
         zone: 'trust2'
         mode: 'layer3'
-        interface: ['ethernet1/1']
+        if_name: 
+          - 'ethernet1/1'
+          - 'ethernet1/2'
+          - 'ethernet1/3'  # Add additional interface names here
+
         
     - name: create DMZ zone on a firewall
       paloaltonetworks.panos.panos_zone:
