--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -26,6 +26,7 @@
     - name: Create ethernet interfaces
       paloaltonetworks.panos.panos_interface:
         provider: '{{ device }}'
+        interface: ['ethernet1/3']
         if_name: 'ethernet1/3'
         mode: 'layer3'
         zone: 'trust2'
