--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -23,11 +23,24 @@
         service: ['application-default']
         action: 'allow'
 
-    - name: create DMZ zone on a firewall
+    - name: create trust2 zone on a firewall
       paloaltonetworks.panos.panos_zone:
         provider: '{{ device }}'
         zone: 'trust2'
         mode: 'layer3'
+        
+    - name: create untrust2 zone on a firewall
+      paloaltonetworks.panos.panos_zone:
+        provider: '{{ device }}'
+        zone: 'untrust2'
+        mode: 'layer3'
+        
+    - name: create VPN zone on a firewall
+      paloaltonetworks.panos.panos_zone:
+        provider: '{{ device }}'
+        zone: 'VPN'
+        mode: 'layer3'
+    
         
     - name: Create ethernet interfaces
       paloaltonetworks.panos.panos_interface:
@@ -39,11 +52,14 @@
         enable_dhcp: false
       register: result
 
-    - name: create DMZ zone on a firewall
-      paloaltonetworks.panos.panos_zone:
-        provider: '{{ device }}'
-        zone: 'untrust2'
-        mode: 'layer3'
+    - name: create tunnel.101
+      paloaltonetworks.panos.panos_tunnel:
+        provider: '{{ provider }}'
+        if_name: "tunnel.101"
+        zone_name: 'VPN'
+        vr_name: 'default'
+
+    
         
     # - name: add ethernet1/2 to zone untrust2
     #   paloaltonetworks.panos.panos_interface:
