--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -54,7 +54,7 @@
 
     - name: create tunnel.101
       paloaltonetworks.panos.panos_tunnel:
-        provider: '{{ provider }}'
+        provider: '{{ device }}'
         if_name: "tunnel.101"
         zone_name: 'VPN'
         vr_name: 'default'
