--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -109,10 +109,11 @@
 
     - name: Create route 'Test-One'
       paloaltonetworks.panos.panos_static_route:
-        provider: '{{ provider }}'
+        provider: '{{ device }}'
         name: 'Test-One'
         destination: '1.1.1.0/24'
         nexthop: '10.0.0.1'
+        metric: "10"
 
     
    
