--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -114,6 +114,7 @@
         destination: '1.1.1.0/24'
         nexthop: '10.0.0.1'
         metric: "10"
+        virtual_router: "vr-1"
 
     
    
