--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -159,7 +159,7 @@
 
 
     - name: Add IPSec crypto config to the firewall
-      paloaltonetworks.panos_ipsec_profile:
+      paloaltonetworks.panos.panos_ipsec_profile:
         provider: '{{ device }}'
         state: 'present'
         name: 'ipsec-vpn-0cc61dd8c06f95cfd-0'
