--- a/paloalto.yaml
+++ b/paloalto.yaml
@@ -175,6 +175,29 @@
         ak_ike_gateway: 'IKEGW-Ansible'
         ak_ipsec_crypto_profile: 'ipsec-vpn-0cc61dd8c06f95cfd-0'
         state: 'present'
+
+    - name: Configure DHCP Server
+      paloaltonetworks.panos.panos_dhcp_server:
+        provider: "{{ device }}"
+        zone: "trust"  # Define the zone for DHCP server
+        name: "dhcp_server"  # Name of the DHCP server
+        state: "present"
+        pool:
+          name: "dhcp_pool"
+          range:
+            - "192.168.1.10"
+            - "192.168.1.50"
+          gateway: "192.168.1.1"
+          subnet_mask: "255.255.255.0"
+          dns_server_primary: "8.8.8.8"
+          dns_server_secondary: "8.8.4.4"
+          lease_time: "3600"  # Lease time in seconds
+          domain_suffix: "example.com"    
+
+     - paloaltonetworks.panos.panos_dhcp:
+       provider: '{{ device }}'
+       interface: 'ethernet1/2'
+       state: 'gathered'   
     
 
     
